--- a/public/index.html
+++ b/public/index.html
@@ -6,14 +6,17 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>iPhone Calculator</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styles/dark.css" id="theme"/>
 </head>
 <body>
 <div class="calculator">
+    <div class="topContainer">
         <div class="circles">
-            <div class="circle red" ></div>
+            <div class="circle red"></div>
             <div class="circle yellow"></div>
             <div class="circle green"></div>
+        </div>
+        <img src="assets/sunIcon.svg" class="switch" width="24px" height="24px">
     </div>
     <div class="value">0</div>
     <div class="buttons-container">
