fix logic plus add shadow

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,9 @@
             <div class="circle yellow"></div>
             <div class="circle green"></div>
         </div>
-        <img src="assets/sunIcon.svg" class="switch" width="24px" height="24px">
+        <button class="btn">
+            <img src="assets/sunIcon.svg"class="switch">
+        </button>
     </div>
     <div class="value">0</div>
     <div class="buttons-container">
