--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>iPhone Calculator</title>
+    <script defer="defer" src="main.js"></script>
     <link rel="stylesheet" href="styles/dark.css" id="theme"/>
 </head>
 <body>
