feat: add responsible design

--- a/public/index.html
+++ b/public/index.html
@@ -17,30 +17,51 @@
             <div class="circle green"></div>
         </div>
         <button class="btn">
-            <img src="assets/sunIcon.svg"class="switch">
+            <img src="assets/sunIcon.svg" class="switch">
         </button>
     </div>
     <div class="value">0</div>
     <div class="buttons-container">
-        <div class="button function ac">AC</div>
-        <div class="button function pm">±</div>
-        <div class="button function percent">%</div>
-        <div class="button operator division">÷</div>
-        <div class="button number-7">7</div>
-        <div class="button number-8">8</div>
-        <div class="button number-9">9</div>
-        <div class="button operator multiplication">×</div>
-        <div class="button number-4">4</div>
-        <div class="button number-5">5</div>
-        <div class="button number-6">6</div>
-        <div class="button operator subtraction">−</div>
-        <div class="button number-1">1</div>
-        <div class="button number-2">2</div>
-        <div class="button number-3">3</div>
-        <div class="button operator addition">+</div>
-        <div class="button number-0">0</div>
-        <div class="button decimal">.</div>
-        <div class="button operator equal">=</div>
+        <!--1st row-->
+        <button class="button function mc">MC</button>
+        <button class="button function mplus">M+</button>
+        <button class="button function mminus">M-</button>
+        <button class="button function mr">MR</button>
+        <button class="button function undo">UN</button>
+        <button class="button operator ac">AC</button>
+        <!--2 row-->
+        <button class="button function sqx">x2</button>
+        <button class="button function sqrx">sqr2</button>
+        <button class="button function pm">±</button>
+        <button class="button function xfac">x!</button>
+        <button class="button function percent">%</button>
+        <button class="button operator division">÷</button>
+        <!--3 row-->
+        <button class="button function sqx">x3</button>
+        <button class="button function sqrx">cr3</button>
+        <button class="button number-1">1</button>
+        <button class="button number-2">2</button>
+        <button class="button number-3">3</button>
+        <button class="button operator multiplication">×</button>
+        <!--4 row-->
+        <button class="button function 10x">xy</button>
+        <button class="button function 1divx">yrx</button>
+        <button class="button number-4">4</button>
+        <button class="button number-5">5</button>
+        <button class="button number-6">6</button>
+        <button class="button operator subtraction">−</button>
+        <!--5 row-->
+        <button class="button function xdegy">xdy</button>
+        <button class="button function xry">xry</button>
+        <button class="button number-7">7</button>
+        <button class="button number-8">8</button>
+        <button class="button number-9">9</button>
+        <button class="button operator addition">+</button>
+        <!--6 row-->
+
+        <button class="button number-0">0</button>
+        <button class="button decimal">.</button>
+        <button class="button operator equal">=</button>
     </div>
     <div class="bottom"></div>
 </div>
