refactor: add pattern command for sqx and sqr

--- a/public/index.html
+++ b/public/index.html
@@ -30,15 +30,15 @@
         <button class="button function undo">UN</button>
         <button class="button operator ac">AC</button>
         <!--2 row-->
-        <button class="button function sqx">x2</button>
-        <button class="button function sqrx">sqr2</button>
+        <button class="button function squarex">x2</button>
+        <button class="button function squarerootx">sqr2</button>
         <button class="button function pm">±</button>
-        <button class="button function xfac">x!</button>
+        <button class="button function xfactorial">x!</button>
         <button class="button function percent">%</button>
         <button class="button operator division">÷</button>
         <!--3 row-->
-        <button class="button function sqx">x3</button>
-        <button class="button function sqrx">cr3</button>
+        <button class="button function cubex">x3</button>
+        <button class="button function cuberootx">cr3</button>
         <button class="button number-1">1</button>
         <button class="button number-2">2</button>
         <button class="button number-3">3</button>
@@ -51,8 +51,8 @@
         <button class="button number-6">6</button>
         <button class="button operator subtraction">−</button>
         <!--5 row-->
-        <button class="button function xdegy">xdy</button>
-        <button class="button function xry">xry</button>
+        <button class="button function xdegreey">xdy</button>
+        <button class="button function xrooty">xry</button>
         <button class="button number-7">7</button>
         <button class="button number-8">8</button>
         <button class="button number-9">9</button>
