--- a/public/index.html
+++ b/public/index.html
@@ -44,8 +44,8 @@
         <button class="button number-3">3</button>
         <button class="button operator multiplication">×</button>
         <!--4 row-->
-        <button class="button function 10x">xy</button>
-        <button class="button function 1divx">yrx</button>
+        <button class="button function tenx">10x</button>
+        <button class="button function onedivx">1/x</button>
         <button class="button number-4">4</button>
         <button class="button number-5">5</button>
         <button class="button number-6">6</button>
@@ -58,7 +58,6 @@
         <button class="button number-9">9</button>
         <button class="button operator addition">+</button>
         <!--6 row-->
-
         <button class="button number-0">0</button>
         <button class="button decimal">.</button>
         <button class="button operator equal">=</button>
