--- a/public/index.html
+++ b/public/index.html
@@ -30,37 +30,37 @@
         <button class="button function undo">UN</button>
         <button class="button operator ac">AC</button>
         <!--2 row-->
-        <button class="button function squarex">x2</button>
-        <button class="button function squarerootx">sqr2</button>
-        <button class="button function pm">±</button>
-        <button class="button function xfactorial">x!</button>
-        <button class="button function percent">%</button>
-        <button class="button operator division">÷</button>
+        <button class="button function" id="squarex">x2</button>
+        <button class="button function" id="squarerootx">sqr2</button>
+        <button class="button function" id="pm">±</button>
+        <button class="button function" id="xfactorial">x!</button>
+        <button class="button function" id="percent">%</button>
+        <button class="button operator" id="division">÷</button>
         <!--3 row-->
-        <button class="button function cubex">x3</button>
-        <button class="button function cuberootx">cr3</button>
+        <button class="button function" id="cubex">x3</button>
+        <button class="button function" id="cuberootx">cr3</button>
         <button class="button number-1">1</button>
         <button class="button number-2">2</button>
         <button class="button number-3">3</button>
-        <button class="button operator multiplication">×</button>
+        <button class="button operator" id="multiplication">×</button>
         <!--4 row-->
-        <button class="button function tenx">10x</button>
-        <button class="button function onedivx">1/x</button>
+        <button class="button function" id="tenx">10x</button>
+        <button class="button function" id="onedivx">1/x</button>
         <button class="button number-4">4</button>
         <button class="button number-5">5</button>
         <button class="button number-6">6</button>
-        <button class="button operator subtraction">−</button>
+        <button class="button operator" id="subtraction">−</button>
         <!--5 row-->
-        <button class="button function xdegreey">xdy</button>
-        <button class="button function xrooty">xry</button>
+        <button class="button function" id="xdegreey">xdy</button>
+        <button class="button function" id="xrooty">xry</button>
         <button class="button number-7">7</button>
         <button class="button number-8">8</button>
         <button class="button number-9">9</button>
-        <button class="button operator addition">+</button>
+        <button class="button operator" id="plus">+</button>
         <!--6 row-->
         <button class="button number-0">0</button>
-        <button class="button decimal">.</button>
-        <button class="button operator equal">=</button>
+        <button class="button" id="decimal">.</button>
+        <button class="button operator" id="equal">=</button>
     </div>
     <div class="bottom"></div>
 </div>
