feat: add memoryplus

--- a/public/index.html
+++ b/public/index.html
@@ -23,10 +23,10 @@
     <div class="value">0</div>
     <div class="buttons-container">
         <!--1st row-->
-        <button class="button function mplus">M+</button>
-        <button class="button function mminus">M-</button>
-        <button class="button function mr">MR</button>
-        <button class="button function mc">MC</button>
+        <button class="button function" id="mplus">M+</button>
+        <button class="button function" id="mminus">M-</button>
+        <button class="button function" id="mr">MR</button>
+        <button class="button function" id="mc">MC</button>
         <button class="button function undo">UN</button>
         <button class="button operator ac">AC</button>
         <!--2 row-->
