refactor: add queryselectorAll

--- a/public/index.html
+++ b/public/index.html
@@ -23,44 +23,44 @@
     <div class="value">0</div>
     <div class="buttons-container">
         <!--1st row-->
-        <button class="button function" id="mplus">M+</button>
-        <button class="button function" id="mminus">M-</button>
-        <button class="button function" id="mr">MR</button>
-        <button class="button function" id="mc">MC</button>
-        <button class="button function undo">UN</button>
-        <button class="button operator ac">AC</button>
+        <button class="button operation" id="mplus">M+</button>
+        <button class="button operation" id="mminus">M-</button>
+        <button class="button operation" id="mr">MR</button>
+        <button class="button operation" id="mc">MC</button>
+        <button class="button operation" id="un">UN</button>
+        <button class="button operation" id="ac">AC</button>
         <!--2 row-->
-        <button class="button function" id="squarex">x2</button>
-        <button class="button function" id="squarerootx">sqr2</button>
-        <button class="button function" id="pm">±</button>
-        <button class="button function" id="xfactorial">x!</button>
-        <button class="button function" id="percent">%</button>
-        <button class="button operator" id="division">÷</button>
+        <button class="button operation" id="squarex">x2</button>
+        <button class="button operation" id="squarerootx">sqr2</button>
+        <button class="button operation" id="pm">±</button>
+        <button class="button operation" id="xfactorial">x!</button>
+        <button class="button operation" id="percent">%</button>
+        <button class="button operation" id="division">÷</button>
         <!--3 row-->
-        <button class="button function" id="cubex">x3</button>
-        <button class="button function" id="cuberootx">cr3</button>
-        <button class="button number-1">1</button>
-        <button class="button number-2">2</button>
-        <button class="button number-3">3</button>
-        <button class="button operator" id="multiplication">×</button>
+        <button class="button operation" id="cubex">x3</button>
+        <button class="button operation" id="cuberootx">cr3</button>
+        <button class="button input" id="number-1">1</button>
+        <button class="button input" id="number-2">2</button>
+        <button class="button input" id="number-3">3</button>
+        <button class="button operation" id="multiplication">×</button>
         <!--4 row-->
-        <button class="button function" id="tenx">10x</button>
-        <button class="button function" id="onedivx">1/x</button>
-        <button class="button number-4">4</button>
-        <button class="button number-5">5</button>
-        <button class="button number-6">6</button>
-        <button class="button operator" id="subtraction">−</button>
+        <button class="button operation" id="tenx">10x</button>
+        <button class="button operation" id="onedivx">1/x</button>
+        <button class="button input" id="number-4">4</button>
+        <button class="button input" id="number-5">5</button>
+        <button class="button input" id="number-6">6</button>
+        <button class="button operation" id="subtraction">−</button>
         <!--5 row-->
-        <button class="button function" id="xdegreey">xdy</button>
-        <button class="button function" id="xrooty">xry</button>
-        <button class="button number-7">7</button>
-        <button class="button number-8">8</button>
-        <button class="button number-9">9</button>
-        <button class="button operator" id="plus">+</button>
+        <button class="button operation" id="xdegreey">xdy</button>
+        <button class="button operation" id="xrooty">xry</button>
+        <button class="button input" id="number-7">7</button>
+        <button class="button input" id="number-8">8</button>
+        <button class="button input" id="number-9">9</button>
+        <button class="button operation" id="plus">+</button>
         <!--6 row-->
-        <button class="button number-0">0</button>
-        <button class="button" id="decimal">.</button>
-        <button class="button operator" id="equal">=</button>
+        <button class="button input" id="number-0">0</button>
+        <button class="button input" id="decimal">.</button>
+        <button class="button operation" id="equal">=</button>
     </div>
     <div class="bottom"></div>
 </div>
